[gd_scene load_steps=6 format=3 uid="uid://1hbdntrt7nwd"]

[ext_resource type="Script" path="res://Scripts/world.gd" id="1_p7wcx"]
[ext_resource type="Texture2D" uid="uid://cke4202f2asfk" path="res://Assets/Space/Backgrounds/darkPurple.png" id="2_qo5u2"]
[ext_resource type="PackedScene" uid="uid://dldeybtbfpncx" path="res://Scenes/enemy_spawner.tscn" id="3_4kpvq"]
[ext_resource type="PackedScene" uid="uid://diuq1xu2sa3uh" path="res://Scenes/player.tscn" id="4_ta2uu"]
[ext_resource type="PackedScene" uid="uid://bpx237g5btk0t" path="res://Scenes/pause_menu.tscn" id="5_k5yv6"]

[node name="World" type="Node2D"]
process_mode = 1
texture_repeat = 2
script = ExtResource("1_p7wcx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_qo5u2")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 540, 960)

[node name="EnemySpawner" parent="." instance=ExtResource("3_4kpvq")]

[node name="Player" parent="." instance=ExtResource("4_ta2uu")]
position = Vector2(277, 878)

[node name="Score" type="Label" parent="."]
offset_left = 19.0
offset_top = 21.0
offset_right = 80.0
offset_bottom = 47.0
text = "Score: 0"

[node name="PauseMenu" parent="." instance=ExtResource("5_k5yv6")]
process_mode = 2
visible = false

[connection signal="add_score" from="EnemySpawner" to="." method="score_increase"]
[connection signal="give_player_power_up" from="EnemySpawner" to="Player" method="collect_power_up"]
[connection signal="spawn_laser" from="Player" to="." method="_on_player_spawn_laser"]
